[gd_scene load_steps=3 format=2]

[ext_resource path="res://to_refile/objects/map/map.gd" type="Script" id=1]
[ext_resource path="res://map/mtiles/mtilesets/default/tileset.tres" type="TileSet" id=2]

[node name="Map" type="YSort"]
script = ExtResource( 1 )

[node name="TmTemplateWalls" type="TileMap" parent="."]
mode = 1
tile_set = ExtResource( 2 )
cell_size = Vector2( 32, 16 )
cell_tile_origin = 1
cell_y_sort = true
collision_mask = 0
format = 1

[node name="TmTemplateGround" type="TileMap" parent="."]
show_behind_parent = true
mode = 1
tile_set = ExtResource( 2 )
cell_size = Vector2( 32, 16 )
cell_y_sort = true
show_collision = true
collision_mask = 0
format = 1

[node name="TmTemplateOnewayWalls" type="TileMap" parent="."]
show_behind_parent = true
mode = 1
tile_set = ExtResource( 2 )
cell_size = Vector2( 32, 16 )
cell_y_sort = true
show_collision = true
collision_layer = 8
collision_mask = 0
format = 1
